feat: Ajustar estilos de contenido y lista en la página de inicio

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding-top">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar color="primary">
       <ion-title size="large">Characters</ion-title>
